Issue #3294629 by smulvih2: GCIntranet WxT search form label visible on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1059,6 +1059,14 @@ ul.js-facets-checkbox-links {
   position: absolute;
   width: 1px; }
 
+#mb-pnl .srch-pnl .block-title {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  margin: 0;
+  overflow: hidden;
+  position: absolute;
+  width: 1px; }
+
 .wb-srch-multi {
   padding-top: 1em; }
 
